--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -28,7 +28,7 @@ Endpoints:
             "username1",
             "username2"
         ],
-        "history": [
+        "history": [ ## ARRAY ##
             {
                 "opponent": "opponentUser1",
                 "result": "win",
@@ -45,10 +45,10 @@ Endpoints:
                 "score": "2-8"
             }
         ],
-        "status": "online"
+        "status": "online"  ###### Booleon for when they sign in #####
     }
 
-
+#####  Get the information for all users ##### fetch all ##### GET Request #####
 /users/profile-list
 
     Response JSON Example for 2 users:
@@ -71,8 +71,7 @@ Endpoints:
 
     Note: The other profile information get requested if needed with the Enpoint /users/profile-info
 
-
-/users/update-profile
+/users/update-profile ### PUT request ###
 
     Allows updating the user's nickname and avatar.
 
@@ -93,7 +92,7 @@ Endpoints:
 /add-friend
 
     Adds or removes a user as a friend. This endpoint updates the friend lists of both users simultaneously.
-    
+    #### dont store as nickname, store as username/user id but send out nickname when someone requests this friend in their profile ###
     Request Format
     {
         "user1": "user",
@@ -110,7 +109,7 @@ Endpoints:
 /block-user
 
     Blocks or unblocks a user. This endpoint updates the blocklists of both users simultaneously.
-    
+
     Request Format
     {
         "user": "user",
@@ -125,4 +124,16 @@ Endpoints:
 
 
 Only allow letters and numbers 0-9 a-z A-Z for usernames and nicknames
+
+
+## Profile info needed by username ##
+
+## Add people to tournament chat ##
+
+## Do we want to block simultaneously?? ##
+
+## Send errror response regarding false nickname/username ##
+
+## When updating nickname in the update info we send a API call to the web socket to uopdate their name ###
+
 
