Both the profile list and profile info is completed and tested

--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -5,6 +5,9 @@ Endpoints:
 /users/profile-info
 
     Gets the profile information for the requested user
+    #####################
+    #### POST request ###
+    #####################
 
     Request Format
     {
